# libicd-network-usb

./: Makefile.am  README  configure.ac
debian/: changelog  control  copyright  libicd-network-usb.install  libicd-network-usb.postinst  libicd-network-usb.prerm  rules
etc/: Makefile.am  libicd-network-usb.schemas
src/: Makefile.am  libicd_network_usb.c  libicd_network_usb.h
